MonetDB/tests/BugReports/Tests/no.150.stable.out.CYGWIN32_NT
stdout of test 'no.150` in directory 'tests/BugReports` itself:

#> Mtest:	milS no.150 milS
#> Mtest:	Mtimeout -timeout 210 Mserver -modulesilent -yaccsilent -d8 -db tests_BugReports -single no.150.milS
# Monet Database Server V4.1
# Copyright (c) 1993-1999, CWI & SION. All rights reserved.
# compiled for CYGWIN32_NT4.0/32bit on Fri Feb 25 14:25:27  2000.
#script:no.150.milS

loaded;
#---------------------------------#
# module	| usage_count	  #
#---------------------------------#
[ "algebra",	  1		  ]
[ "arith",	  1		  ]
[ "bat",	  1		  ]
[ "kernel",	  1		  ]
[ "str",	  1		  ]
[ "sys",	  1		  ]
[ "trans",	  1		  ]

Try: modules;                - for other modules.
     ls;                     - for persistent bat listing.
     sigs("<module>")        - for available commands per module.
     help("<command>")       - for help one-liner for a command.

#You are system administrator (adm)!
!ERROR: DL_open: library not found (STATIC).
!ERROR: TBL_loadmod: module load jabberwocky cancelled.
!ERROR: module(jabberwocky): load error.
